--- a/tiles.html
+++ b/tiles.html
@@ -5,18 +5,20 @@
     <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
 
     <style>
-        body {
-            background-color: #1e1e1e;
-        }
         canvas {
             display: block;
             margin-left: auto;
             margin-right: auto;
         }
     </style>
-    
+
     <script src="tiles.js"></script>
     
 </head>
+
+<body>
+
+</body>
+
 
 </html>
