added Slimes, 8 direction projectiles
bug: slimes can push players off the edge of the map
slimes can hit players. players can not hit slimes yet
projectiles can now be shot in 8 directions
removed some unused placeholder assets

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 
 <head>
     <title>CMPM 102 Phaser game</title>
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
-
     <style>
         body {
             background-color: #1e1e1e;
@@ -15,7 +13,11 @@
         }
     </style>
     
-    <script src="game.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <script  src="game.js"></script>
+
+    <!-- This is not the correct way to import files.. fix later -->
+    <script  src="slime.js"></script>
     
 </head>
 
