--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     
 
     <!-- This is not the correct way to import files.. fix later -->
+    
+    <script  src="enemy.js"></script>
     <script  src="slime.js"></script>
     <script  src="player.js"></script>
 
