--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <style>
         body {
             background-color: #1e1e1e;
+            overflow: hidden;
+            margin: 0;
+            padding: 0;
         }
         canvas {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
     </style>
     
