--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script  src="enemy.js"></script>
     <script  src="slime.js"></script>
     <script  src="player.js"></script>
+    <script  src="inventory.js"></script>
 
     <script  src="game.js"></script>
     
