--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script  src="slime.js"></script>
     <script  src="player.js"></script>
     <script  src="inventory.js"></script>
-
+    <script  src="boss.js"></script>
     <script  src="game.js"></script>
     
 </head>
