added libraries locally

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <body>
         <div style="font-family:minecraft_font; position: absolute; left:-1000px; visibility:hidden;">.</div>
-        <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+        <script src="assets/libs/phaser@3.55.2.js"></script>
         <script  src="enemy.js"></script>
         <script  src="slime.js"></script>
         <script  src="player.js"></script>
